--- a/anksoftwareblog.uı/package.json
+++ b/anksoftwareblog.uı/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.22.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-pro-sidebar": "^1.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
